Make sure objects inside markdown-content don't overflow container.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,9 @@ main .markdown-content li {
 main .markdown-content li:first-child {
   @apply mt-2;
 }
+main .markdown-content audio, canvas, embed, iframe, img, object, svg, video {
+  @apply max-w-full;
+}
 
 @screen md {
   h1 {
